#ifndef __STATE_H__
#define __STATE_H__ 

class State
{
    public:
        State() {}
        virtual ~State() {}
};

#endif /* ifndef __STATE_H__ */
